Prevent horizontal overflow

--- a/src/stylesheets/components/_header-gradient.sass
+++ b/src/stylesheets/components/_header-gradient.sass
@@ -1,7 +1,7 @@
 .header-gradient
   background-color: $white
   display: block
-  width: 100vw
+  width: 100%
   height: 41.625rem
   position: absolute
   z-index: -1
@@ -22,7 +22,7 @@
     width: 50%
 
   &__big-rectangle
-    width: 100vw
+    width: 100%
     height: 33.0625rem
     background: rgba(122, 220, 252, 0.02)
     bottom: 0
