--- a/src/stylesheets/pageparts/_hero-banner.sass
+++ b/src/stylesheets/pageparts/_hero-banner.sass
@@ -75,7 +75,7 @@
     max-height: 62.5rem
 
     &-horizontal
-      width: 100vw
+      width: 100%
 
       @media (min-width: $smallDesktop)
         width: 50rem
@@ -87,7 +87,7 @@
       width: 20.5625rem
 
       @media (max-width: $maxSmallDesktop)
-        width: 100vw
+        width: 100%
 
       .swiper-slide
         @media (max-width: $maxSmallDesktop)
